@@ -676,11 +676,11 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 {
 	int k, hi, lo, mi;
 	UChar ch,src[2],dest[8],strX[4],strY[4],strZ[4],strW[4];
-	UChar32 c32;
+	UChar32 c32,cu;
 	UErrorCode perr;
-	UCollationResult order,order1,order2,order3,order4,order5;
+	UCollationResult order,order1,order2,order3,order4,order5,order6;
 	UCollationStrength strgth;
-	static int i_y_mode=0,o_o_mode=0,u_u_mode=0,v_w_mode=0,s_s_mode=0,t_t_mode=0;
+	static int i_y_mode=0,o_o_mode=0,u_u_mode=0,v_w_mode=0,s_s_mode=0,t_t_mode=0,d_d_mode=0,e_e_mode=0;
 
 	ch=istr[0];
 	*chset=charset(istr);
@@ -898,7 +898,8 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 		/* Fullwidth latin letter */
 		ch-=0xFF21-0x0041;
 	}
-	if (ch==0x049||ch==0x069||ch==0x130||ch==0x131||ch==0x0CE||ch==0x0EE) {
+	cu = u_toupper(ch);
+	if (cu==0x049||ch==0x130||ch==0x131||cu==0x0CE) {
 		/* check dotted/dotless İ,I,i,ı and Î,î for Turkish */
 		if (turkish_i==0) {
 			strgth = ucol_getStrength(icu_collator);
@@ -914,7 +915,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			return;
 		}
 	}
-	if (ch==0x059||ch==0x079) {
+	if (cu==0x059) {
 		/* check Y versus I for Lithuanian */
 		if (i_y_mode==0) {
 			strgth = ucol_getStrength(icu_collator);
@@ -930,7 +931,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			return;
 		}
 	}
-	if (ch==0x057||ch==0x077) {
+	if (cu==0x057) {
 		/* check V versus W for Finnish */
 		if (v_w_mode==0) {
 			strgth = ucol_getStrength(icu_collator);
@@ -946,7 +947,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			return;
 		}
 	}
-	if (ch==0x15E||ch==0x15F||ch==0x218||ch==0x219) {
+	if (cu==0x15E||cu==0x218) {
 		/* check Ş versus Ș for Romanian */
 		if (s_s_mode<=2) {
 			strgth = ucol_getStrength(icu_collator);
@@ -973,7 +974,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			ucol_setStrength(icu_collator, strgth);
 		}
 		if (s_s_mode==2) {
-			ini[0] = u_toupper(ch);  return;
+			ini[0] = cu;     return;
 		}
 		if (s_s_mode==4) {
 			ini[0] = 0x15E;  return;
@@ -982,7 +983,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			ini[0] = 0x218;  return;
 		}
 	}
-	if (ch==0x162||ch==0x163||ch==0x21A||ch==0x21B) {
+	if (cu==0x162||cu==0x21A) {
 		/* check Ţ versus Ț for Romanian */
 		if (t_t_mode<=2) {
 			strgth = ucol_getStrength(icu_collator);
@@ -1009,7 +1010,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			ucol_setStrength(icu_collator, strgth);
 		}
 		if (t_t_mode==2) {
-			ini[0] = u_toupper(ch);  return;
+			ini[0] = cu;     return;
 		}
 		if (t_t_mode==4) {
 			ini[0] = 0x162;  return;
@@ -1018,11 +1019,51 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			ini[0] = 0x21A;  return;
 		}
 	}
-	if (ch==0x0D6||ch==0x0F6||ch==0x150||ch==0x151
-		||ch==0x0D8||ch==0x0F8||ch==0x0D5||ch==0x0F5) {
+	if (cu==0x0D0||cu==0x110) {
+		/* check ð,Ð versus đ,Đ for Danish, Norwegian, Finnish, Swedish, Icelandic */
+		if (d_d_mode<=2) {
+			strgth = ucol_getStrength(icu_collator);
+			strX[0] = ch;     strX[1] = 0x00; /* myself */
+			strZ[0] = 0x044;  strZ[1] = 0x00; /* D */
+			ucol_setStrength(icu_collator, UCOL_PRIMARY);
+			order = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
+			if (d_d_mode==0 && order!=UCOL_EQUAL) {
+				strX[0] = 0x0D0;  strX[1] = 0x00; /* Ð, Eth */
+				strY[0] = 0x110;  strY[1] = 0x00; /* Đ, D with Stroke */
+				order1 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+				if (order1==UCOL_EQUAL) d_d_mode = 3;
+			}
+			if (d_d_mode<3) {
+				d_d_mode = (order==UCOL_EQUAL) ? 1 : 2;
+			}
+			ucol_setStrength(icu_collator, strgth);
+		}
+		if (d_d_mode==3) {
+			strgth = ucol_getStrength(icu_collator);
+			ucol_setStrength(icu_collator, UCOL_QUATERNARY);
+			order  = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+			d_d_mode = (order==UCOL_LESS) ? 5 : 4;
+			ucol_setStrength(icu_collator, strgth);
+		}
+		if (d_d_mode==1) {
+			ini[0] = 0x044;  return;
+		}
+		if (d_d_mode==2) {
+			ini[0] = cu;     return;
+		}
+		if (d_d_mode==4) {
+			ini[0] = 0x0D0;  return;
+		}
+		if (d_d_mode==5) {
+			ini[0] = 0x110;  return;
+		}
+	}
+	if (cu==0x0D6||cu==0x150
+		||cu==0x0D8||cu==0x0D5||cu==0x0D4) {
 		/* check Ö,ö versus Ő,ő for Hungarian
 		         Ø,ø versus Ö,ö for Danish, Norwegian
-		         Ö,ö versus Ø,ø,Ő,ő,Õ,õ for Finnish SFS 4600 */
+		         Ö,ö versus Ø,ø,Ő,ő,Õ,õ for Finnish SFS 4600
+		         Ö,ö versus Ø,ø,Ő,ő,Ô,ô for Swedish */
 		if (o_o_mode==0) {
 			strgth = ucol_getStrength(icu_collator);
 			ucol_setStrength(icu_collator, UCOL_PRIMARY);
@@ -1044,11 +1085,13 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			strX[0] = 0x0D6;  strX[1] = 0x00; /* Ö */
 			strY[0] = 0x0D8;  strY[1] = 0x00; /* Ø */
 			strZ[0] = 0x150;  strZ[1] = 0x00; /* Ő */
-			strW[0] = 0x0D5;  strZ[1] = 0x00; /* Õ */
 			order2 = ucol_strcoll(icu_collator, strY, -1, strZ, -1);
 			order3 = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
 			order4 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+			strW[0] = 0x0D5;  strZ[1] = 0x00; /* Õ */
+			strY[0] = 0x0D4;  strY[1] = 0x00; /* Ô */
 			order5 = ucol_strcoll(icu_collator, strW, -1, strX, -1);
+			order6 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
 			if (order1==UCOL_LESS && order4==UCOL_LESS) {
 				o_o_mode = 3;           /* O < Ø << Ö */
 				if (order2==UCOL_LESS)
@@ -1059,6 +1102,8 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 					o_o_mode = 7;   /* O < Ö << Ø and O < Ö << Ő */
 				if (order3==UCOL_GREATER && order5==UCOL_GREATER)
 					o_o_mode = 8;   /* O < Ö << Ø and O < Ö << Ő and O < Ö << Õ */
+				if (order3==UCOL_GREATER && order6==UCOL_GREATER)
+					o_o_mode = 9;   /* O < Ö << Ø and O < Ö << Ő and O < Ö << Ô */
 			} else if (order==UCOL_LESS && order3==UCOL_GREATER) {
 				o_o_mode = 5;           /* O < Ö << Ő */
 			}
@@ -1075,69 +1120,151 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 		    (o_o_mode==7 && (ch==0x150||ch==0x151||ch==0x0D8||ch==0x0F8)) || /* Ő,Ø */
 		    (o_o_mode==8 && (ch==0x150||ch==0x151||
 		                     ch==0x0D8||ch==0x0F8||ch==0x0D5||ch==0x0F5)) || /* Ő,Ø,Õ */
-		    (o_o_mode>=5 && o_o_mode<=8 && (ch==0x0D6||ch==0x0F6))) { /* Ö */
+		    (o_o_mode==9 && (ch==0x150||ch==0x151||
+		                     ch==0x0D8||ch==0x0F8||ch==0x0D4||ch==0x0F4)) || /* Ő,Ø,Ô */
+		    (o_o_mode>=5 && o_o_mode<=9 && (ch==0x0D6||ch==0x0F6))) { /* Ö */
 			ini[0] = 0x0D6; /* Ö */
 			return;
 		}
 	}
-	if (ch==0x0DC||ch==0x0FC||ch==0x170||ch==0x171) {
-		/* check Ü,ü versus Ű,ű for Hungarian, and for Finnish SFS 4600 */
+	if (cu==0x0DC||cu==0x170) {
+		/* check Ü,ü versus Ű,ű for Hungarian
+		         Ü,ü,Ű,ű versus Y for Danish, Norwegian, Swedish, Finnish */
 		if (u_u_mode==0) {
 			strgth = ucol_getStrength(icu_collator);
 			ucol_setStrength(icu_collator, UCOL_PRIMARY);
 			strX[0] = 0x0DC;  strX[1] = 0x00; /* Ü */
 			strY[0] = 0x170;  strY[1] = 0x00; /* Ű */
 			strZ[0] = 0x055;  strZ[1] = 0x00; /* U */
-			order = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+			strW[0] = 0x059;  strW[1] = 0x00; /* Y */
+			order  = ucol_strcoll(icu_collator, strY, -1, strX, -1);
 			order1 = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
-			if (order==UCOL_EQUAL && order1!=UCOL_EQUAL) {
-				strZ[0] = 0x059;          /* Y */
-				order1 = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
-				u_u_mode = (order1==UCOL_EQUAL) ? 3 : 2;
-			} else {
-				u_u_mode = 1;
-			}
+			order2 = ucol_strcoll(icu_collator, strW, -1, strX, -1);
+			order3 = ucol_strcoll(icu_collator, strZ, -1, strY, -1);
+			order4 = ucol_strcoll(icu_collator, strW, -1, strY, -1);
 			ucol_setStrength(icu_collator, strgth);
+			if      (order1==UCOL_EQUAL && order3==UCOL_EQUAL)
+				u_u_mode = 2;
+			else if (order2==UCOL_EQUAL && order4==UCOL_EQUAL)
+				u_u_mode = 3;
+			else if (order1==UCOL_EQUAL && order4==UCOL_EQUAL)
+				u_u_mode = 4;
+			else if (order2==UCOL_EQUAL && order3==UCOL_EQUAL)
+				u_u_mode = 5;
+			else if (order1==UCOL_EQUAL)
+				u_u_mode = 6;
+			else if (order2==UCOL_EQUAL)
+				u_u_mode = 7;
+			else if (order3==UCOL_EQUAL)
+				u_u_mode = 8;
+			else if (order4==UCOL_EQUAL)
+				u_u_mode = 9;
+			else if (order ==UCOL_EQUAL) {
+				ucol_setStrength(icu_collator, UCOL_SECONDARY);
+				order5 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+				ucol_setStrength(icu_collator, strgth);
+				u_u_mode = (order5==UCOL_LESS) ? 11 : 10;
+			}
+			else
+				u_u_mode = 1;
 		}
-		if (u_u_mode==2) {
-			ini[0] = 0x0DC; /* Ü */
+		if (((u_u_mode==2||u_u_mode==4||u_u_mode==6)
+			        && (ch==0x0DC||ch==0x0FC)) || /* Ü */
+		    ((u_u_mode==2||u_u_mode==5||u_u_mode==8)
+			        && (ch==0x170||ch==0x171))) { /* Ű */
+			ini[0] = 0x055; /* U */
 			return;
-		} else if (o_o_mode==3) {
+		}
+		if (((u_u_mode==3||u_u_mode==5||u_u_mode==7)
+			        && (ch==0x0DC||ch==0x0FC)) || /* Ü */
+		    ((u_u_mode==3||u_u_mode==4||u_u_mode==9)
+			        && (ch==0x170||ch==0x171))) { /* Ű */
 			ini[0] = 0x059; /* Y */
 			return;
 		}
+		if (u_u_mode==10) {
+			ini[0] = 0x0DC; /* Ü */
+			return;
+		}
+		if (u_u_mode==11) {
+			ini[0] = 0x170; /* Ű */
+			return;
+		}
 	}
-	if (ch==0x0C6||ch==0x0E6||ch==0x152||ch==0x153||ch==0x132||ch==0x133
-		||ch==0x0DF||ch==0x1E9E||ch==0x13F||ch==0x140||ch==0x149||ch==0x490||ch==0x491) {
-		strX[0] = u_toupper(ch);  strX[1] = 0x00; /* ex. "Æ" "Œ" */
-		switch (ch) {
-			case 0x0C6: case 0x0E6:        /* Æ æ */
+	if (cu==0x118) {
+		/* check Ę,ę versus Ä,ä,Æ,æ for Norwegian, Swedish */
+		if (e_e_mode==0) {
+			strgth = ucol_getStrength(icu_collator);
+			ucol_setStrength(icu_collator, UCOL_PRIMARY);
+			strX[0] = 0x118;  strX[1] = 0x00; /* Ę */
+			strY[0] = 0x0C4;  strY[1] = 0x00; /* Ä */
+			strZ[0] = 0x0C6;  strZ[1] = 0x00; /* Æ */
+			strW[0] = 0x045;  strW[1] = 0x00; /* E */
+			order  = ucol_strcoll(icu_collator, strW, -1, strX, -1);
+			order1 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+			order2 = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
+			order3 = ucol_strcoll(icu_collator, strZ, -1, strY, -1);
+			ucol_setStrength(icu_collator, strgth);
+			if      (order ==UCOL_EQUAL)
+				e_e_mode = 2;
+			else if (order1==UCOL_EQUAL && order2==UCOL_EQUAL) {
+				ucol_setStrength(icu_collator, UCOL_SECONDARY);
+				order5 = ucol_strcoll(icu_collator, strZ, -1, strY, -1);
+				ucol_setStrength(icu_collator, strgth);
+				e_e_mode = (order5==UCOL_LESS) ? 4 : 3;
+			}
+			else if (order1==UCOL_EQUAL)
+				e_e_mode = 5;
+			else if (order2==UCOL_EQUAL)
+				e_e_mode = 6;
+			else
+				e_e_mode = 1;
+		}
+		if (e_e_mode==3||e_e_mode==5) {
+			ini[0] = 0x0C4; /* Ä */
+			return;
+		}
+		if (e_e_mode==4||e_e_mode==6) {
+			ini[0] = 0x0C6; /* Æ */
+			return;
+		}
+	}
+	if (cu==0x0C6||cu==0x0DE||ch==0x0DF||ch==0x1E9E
+		||cu==0x132||cu==0x13F||ch==0x149||cu==0x14A
+		||cu==0x152||cu==0x490) {
+		strX[0] = cu;  strX[1] = 0x00; /* ex. "Æ" "Œ" */
+		switch (cu) {
+			case 0x0C6:                    /* Æ æ */
 				strZ[0] = 0x41;        /* A   */
 				strW[0] = 0xC4; break; /* Ä   */
-			case 0x152: case 0x153:        /* Œ œ */
+			case 0x152:                    /* Œ œ */
 				strZ[0] = 0x4F;        /* O   */
+				strY[0] = 0xD8;        /* Ø   */
 				strW[0] = 0xD6; break; /* Ö   */
-			case 0x0DF: case 0x1E9E:       /* ß ẞ */
+			case 0x0DF: case 0x1E9E:       /* ß ẞ (u_toupper(ch) returns ch) */
 				strZ[0] = 0x53; break; /* S   */
-			case 0x132: case 0x133:        /* Ĳ ĳ */
+			case 0x0DE:                    /* Þ þ */
+				strZ[0] = 0x54; break; /* T   */
+			case 0x132:                    /* Ĳ ĳ */
 				strZ[0] = 0x59;        /* Y   */
 				strZ[1] = 0x00;
 				if (ucol_equal(icu_collator, strZ, -1, strX, -1)) { ini[0]=0x59; return; }
 				strZ[0] = 0x49; break; /* I   */
-			case 0x13F: case 0x140:        /* Ŀ ŀ */
+			case 0x13F:                    /* Ŀ ŀ */
 				strZ[0] = 0x4C; break; /* L   */
-			case 0x149:                    /* ŉ   */
+			case 0x149:                    /* ŉ    (u_toupper(ch) returns ch) */
+			case 0x14A:                    /* Ŋ ŋ */
 				strZ[0] = 0x4E; break; /* N   */
-			case 0x490: case 0x491:        /* Ґ ґ */
+			case 0x490:                    /* Ґ ґ */
 				strZ[0] = 0x413; break; /* Г   */
 		}
-		strZ[1] = (ch==0x490||ch==0x491) ? 0x42F : 0x5A;
+		strZ[1] = (cu==0x490) ? 0x42F : 0x5A;
 		strZ[2] = 0x00;                           /* ex. "AZ" "OZ" "ГЯ" */
 		order = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
 		if (order==UCOL_GREATER) { ini[0]=strZ[0]; return; }  /* not ligature */
 
-		if (ch==0x0C6||ch==0x0E6||ch==0x152||ch==0x153) {
-		/* check Æ,Œ versus Ä,Ö for Finnish */
+		if (cu==0x0C6) {
+		/* check Æ versus Ä for Danish, Norwegian, Finnish, Swedish */
 			strW[1] = 0x00;
 			strgth = ucol_getStrength(icu_collator);
 			ucol_setStrength(icu_collator, UCOL_PRIMARY);
@@ -1146,7 +1273,37 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			order1 = ucol_strcoll(icu_collator, strW, -1, strX, -1);
 			strgth = ucol_getStrength(icu_collator);
 			if (order==UCOL_EQUAL) {
-				ini[0] = (order1==UCOL_GREATER) ? strX[0] : strW[0];
+				ini[0] = (order1==UCOL_LESS) ? strW[0] : strX[0];
+				return;
+			}
+		}
+		if (cu==0x152) {
+		/* check Œ versus Ö,Ø for Finnish, Norwegian, Swedish */
+			strY[1] = 0x00;  strW[1] = 0x00;
+			strgth = ucol_getStrength(icu_collator);
+			ucol_setStrength(icu_collator, UCOL_PRIMARY);
+			order  = ucol_strcoll(icu_collator, strW, -1, strX, -1);
+			order2 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+			ucol_setStrength(icu_collator, UCOL_SECONDARY);
+			order1 = ucol_strcoll(icu_collator, strW, -1, strX, -1);
+			order3 = ucol_strcoll(icu_collator, strY, -1, strX, -1);
+			order4 = ucol_strcoll(icu_collator, strY, -1, strW, -1);
+			strgth = ucol_getStrength(icu_collator);
+			if (order==UCOL_EQUAL && order2==UCOL_EQUAL) {
+				if (order1!=UCOL_LESS && order3!=UCOL_LESS)
+					ini[0] = strX[0];
+				else if (order4==UCOL_LESS)
+					ini[0] = strY[0];
+				else
+					ini[0] = strW[0];
+				return;
+			}
+			else if (order==UCOL_EQUAL) {
+				ini[0] = (order1==UCOL_LESS) ? strW[0] : strX[0];
+				return;
+			}
+			else if (order2==UCOL_EQUAL) {
+				ini[0] = (order3==UCOL_LESS) ? strY[0] : strX[0];
 				return;
 			}
 		}
@@ -1162,7 +1319,7 @@ static void index_normalize(UChar *istr, UChar *ini, int *chset)
 			else if (is_cyrillic(&ch)) { strZ[1] = 0x42F; }  /* Я */
 			else                       { strZ[1] = 0x3A9; }  /* Ω */
 			strZ[0] = u_toupper(dest[0]);  strZ[2] = 0x00;   /* ex. "AZ" */
-			strX[0] = u_toupper(ch);       strX[1] = 0x00;   /* ex. "Å"  */
+			strX[0] = cu;                  strX[1] = 0x00;   /* ex. "Å"  */
 			order = ucol_strcoll(icu_collator, strZ, -1, strX, -1);
 			if (order==UCOL_LESS) {                            /* with diacritic */
 				if (strX[0]!=0xC4) {                /* Ä */
